# qpproblem-smo-solver-module

./: .gitignore  pyproject.toml  requirements.txt  setup.py
module/: setup.py
module/src/: main.cpp
module/src/include/: kernel.h  smo.h
module/src/source/: kernel.cpp  smo.cpp
src/: main.cpp
src/include/: smo.h
src/source/: kernel.cpp
tests/: test.py
